--- a/pages/alumni-union/detail/detail.wxml
+++ b/pages/alumni-union/detail/detail.wxml
@@ -96,7 +96,7 @@
   </view>
 
   <view wx:else class="empty-state">
-    <image src="https://via.placeholder.com/200/f0f0f0/999999?text=Empty" mode="aspectFill" />
+    <image src="{{emptyImage}}" mode="aspectFill" />
     <text>暂无校友总会信息</text>
   </view>
 </view>
