--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -5,8 +5,8 @@
     <view class="search-input-wrap">
       <input class="search-input" type="text" placeholder="搜索母校、校友会、校友" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" focus />
       <view class="search-actions">
-        <image class="scan-btn-icon" src="/assets/icons/扫一扫.png" mode="aspectFit" bindtap="scanCode" />
-        <image class="search-btn" src="/assets/icons/搜索栏搜索.png" mode="aspectFit" bindtap="onSearch" />
+        <image class="scan-btn-icon" src="{{iconScan}}" mode="aspectFit" bindtap="scanCode" />
+        <image class="search-btn" src="{{iconSearch}}" mode="aspectFit" bindtap="onSearch" />
       </view>
     </view>
   </view>
